colors and fonts, logo and vectors added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hostinger - Redesign</title>
+
+    <!-- favicon  -->
+    <link rel="shortcut icon" href="assets/logo/favicon.svg" type="image/x-icon">
+
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;600;700;800;900&family=Manrope:wght@400;600;700;800&display=swap"
+        rel="stylesheet">
+
+    <!-- css -->
+    <link rel="stylesheet" href="dist/scss/main.css">
+
+
 </head>
 
 <body>
 
+    <script src="dist/js/main.js"></script>
 </body>
 
 </html>
