Responsive Header Code Added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;600;700;800;900&family=Manrope:wght@400;600;700;800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;600;700;800;900&family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 
     <!-- css -->
@@ -24,7 +24,144 @@
 </head>
 
 <body>
+    <header class="header" id="header">
+        <div class="hamburger-menu" id="hamburger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+        </div>
 
+
+        <div class="nav">
+            <div class="nav-menu">
+                <div class="nav-menu-item nav-menu-item-1">
+                    <button class="nav-menu-item-btn">
+                        <p>Hosting</p>
+                        <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M3.06723 0.899772L8.37019 6.20273L13.6732 0.899772C14.2062 0.366743 15.0672 0.366743 15.6003 0.899772C16.1333 1.4328 16.1333 2.29385 15.6003 2.82688L9.32691 9.10023C8.79388 9.63326 7.93284 9.63326 7.39981 9.10023L1.12646 2.82688C0.593427 2.29385 0.593427 1.4328 1.12646 0.899772C1.65949 0.38041 2.5342 0.366743 3.06723 0.899772Z"
+                                fill="white" />
+                        </svg>
+                    </button>
+                    <ul class="nav-menu-item-links" id="nav-menu-item-links">
+                        <li>
+                            Web Hosting
+                        </li>
+                        <li>
+                            Cloud Hosting
+                        </li>
+                        <li>
+                            Wordpress Hosting
+                        </li>
+                    </ul>
+                </div>
+                <div class="nav-menu-item nav-menu-item-1">
+                    <button class="nav-menu-item-btn">
+                        <p>VPS</p>
+                        <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M3.06723 0.899772L8.37019 6.20273L13.6732 0.899772C14.2062 0.366743 15.0672 0.366743 15.6003 0.899772C16.1333 1.4328 16.1333 2.29385 15.6003 2.82688L9.32691 9.10023C8.79388 9.63326 7.93284 9.63326 7.39981 9.10023L1.12646 2.82688C0.593427 2.29385 0.593427 1.4328 1.12646 0.899772C1.65949 0.38041 2.5342 0.366743 3.06723 0.899772Z"
+                                fill="white" />
+                        </svg>
+                    </button>
+                    <ul class="nav-menu-item-links" id="nav-menu-item-links">
+                        <li>
+                            VPS Hosting
+                        </li>
+                        <li>
+                            CyberPanel Hosting
+                        </li>
+                        <li>
+                            Minecraft Server Hosting
+                        </li>
+                    </ul>
+                </div>
+                <div class="nav-menu-item nav-menu-item-1">
+                    <button class="nav-menu-item-btn">
+                        <p>Email</p>
+                        <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M3.06723 0.899772L8.37019 6.20273L13.6732 0.899772C14.2062 0.366743 15.0672 0.366743 15.6003 0.899772C16.1333 1.4328 16.1333 2.29385 15.6003 2.82688L9.32691 9.10023C8.79388 9.63326 7.93284 9.63326 7.39981 9.10023L1.12646 2.82688C0.593427 2.29385 0.593427 1.4328 1.12646 0.899772C1.65949 0.38041 2.5342 0.366743 3.06723 0.899772Z"
+                                fill="white" />
+                        </svg>
+                    </button>
+                    <ul class="nav-menu-item-links">
+                        <li>
+                            Google Workspace Email Hosting
+                        </li>
+                        <li>
+                            Hostinger Email Hosting
+                        </li>
+                    </ul>
+                </div>
+                <div class="nav-menu-item nav-menu-item-1">
+                    <button class="nav-menu-item-btn">
+                        <p>Domain</p>
+                        <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M3.06723 0.899772L8.37019 6.20273L13.6732 0.899772C14.2062 0.366743 15.0672 0.366743 15.6003 0.899772C16.1333 1.4328 16.1333 2.29385 15.6003 2.82688L9.32691 9.10023C8.79388 9.63326 7.93284 9.63326 7.39981 9.10023L1.12646 2.82688C0.593427 2.29385 0.593427 1.4328 1.12646 0.899772C1.65949 0.38041 2.5342 0.366743 3.06723 0.899772Z"
+                                fill="white" />
+                        </svg>
+                    </button>
+                    <ul class="nav-menu-item-links">
+                        <li>
+                            Domain Name Search
+                        </li>
+                        <li>
+                            Whois Lookup
+                        </li>
+                        <li>
+                            Domain Transfer
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="btn-groups">
+            <a href="#" class="btn btn-login">
+                <div class="btn-image">
+                    <img src="assets/icons/login.svg" alt="login">
+                </div>
+                <p>Login</p>
+            </a>
+            <a href="#" class="btn btn-cart">
+                <div class="btn-image">
+                    <img src="assets/icons/cart.svg" alt="login">
+                </div>
+                <p>Cart</p>
+            </a>
+        </div>
+    </header>
+    <main>
+
+        <!-- hero section  -->
+        <section class="hero" id="hero">
+            <div class="logo">
+                <img src="assets/logo/name-logo.svg" alt="Logo">
+            </div>
+        </section>
+        <!-- ----- -->
+    </main>
     <script src="dist/js/main.js"></script>
 </body>
 
