responsive hero section addedd and something update in header code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;600;700;800;900&family=Manrope:wght@400;500;600;700;800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;600;700;800;900&family=Manrope:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
     <!-- css -->
@@ -24,6 +24,8 @@
 </head>
 
 <body>
+    <div class="circle">
+    </div>
     <header class="header" id="header">
         <div class="hamburger-menu" id="hamburger-menu">
             <div class="line line-1"></div>
@@ -119,33 +121,15 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <div class="btn-groups">
-            <a href="#" class="btn btn-login">
-                <div class="btn-image">
+            <a href="#" class="btn-groups-btn btn-login">
+                <div class="btn-groups-btn-image">
                     <img src="assets/icons/login.svg" alt="login">
                 </div>
                 <p>Login</p>
             </a>
-            <a href="#" class="btn btn-cart">
-                <div class="btn-image">
+            <a href="#" class="btn-groups-btn btn-cart">
+                <div class="btn-groups-btn-image">
                     <img src="assets/icons/cart.svg" alt="login">
                 </div>
                 <p>Cart</p>
@@ -158,6 +142,41 @@
         <section class="hero" id="hero">
             <div class="logo">
                 <img src="assets/logo/name-logo.svg" alt="Logo">
+            </div>
+            <div class="hero-container">
+                <div class="hero-container-textarea">
+                    <h2>Savings to Set Your <span>Website</span> in Motion</h2>
+                    <h1><span>₹</span>149.00<span>/mo</span></h1>
+                    <p>Get things moving with a free domain, lifetime SSL, and DDoS protection included with a four-year
+                        subscription.</p>
+                    <ul class="timer">
+                        <li>
+                            <p id="days">00</p>
+                            <span>Days</span>
+                        </li>
+                        <li>
+                            <p id="hours">00</p>
+                            <span>Hours</span>
+                        </li>
+                        <li>
+                            <p id="minutes">00</p>
+                            <span>Minutes</span>
+                        </li>
+                        <li>
+                            <p id="seconds">00</p>
+                            <span>Seconds</span>
+                        </li>
+                    </ul>
+                    <button class="btn btn-getstarted">
+                        Get Started
+                    </button>
+                    <p class="guarantee">
+                        <img src="assets/vector/correct.svg" alt="correct">Get exclusive 30-day money-back guarantee
+                    </p>
+                </div>
+                <div class="hero-container-vectorarea">
+                    <img class="web" src="assets/vector/web.svg" alt="web vector art">
+                </div>
             </div>
         </section>
         <!-- ----- -->
