responsive price section code added

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
             </div>
             <div class="price-container-box" data-aos="fade-up">
                 <div class="price-container-box-card">
-                    <ul class="price-container-box-card-list">
-                    </ul>
+                    <div class="price-container-box-card-list">
+                    </div>
                     <div class="price-container-box-card-price">
                         <h1><span>₹</span>149.00<span>/mo</span></h1>
                         <p>₹249.00/mo when you renew</p>
