responsive services section code added

--- a/index.html
+++ b/index.html
@@ -197,9 +197,10 @@
 
             <div class="price-container">
                 <div class="price-container-text">
-                    <h1 data-aos="fade-up">All-In-One Web Hosting
+                    <h1 class="title-h1" data-aos="fade-up">All-In-One Web Hosting
                     </h1>
-                    <p data-aos="fade-up">We prepared the best web hosting plan for you to start. You will be able
+                    <p class="title-p" data-aos="fade-up">We prepared the best web hosting plan for you to start. You
+                        will be able
                         to adjust plans as you
                         go - our custom-built
                         algorithm will provide suggestions based on your usage.</p>
@@ -223,6 +224,60 @@
             </div>
         </section>
         <!-- ----- -->
+        <section class="service" id="service">
+            <h1 class="title-h1" data-aos="fade-up">Our Services Include</h1>
+            <div class="service-container" data-aos="fade-up">
+                <div class="service-container-box">
+                    <ul class="service-container-box-list" id="service-container-box-list-1">
+                        <li>
+                            <img src="https://assets.hostinger.com/images/homepage2021/services/access-management-01f91d3436.svg"
+                                alt="">
+                            <p>Access Management</p>
+                        </li>
+                        <li>
+                            <img src="https://assets.hostinger.com/images/homepage2021/services/ecommerce-c7adac5be7.svg"
+                                alt="">
+                            <p>ECommerce Optimization</p>
+                        </li>
+                        <li>
+                            <img src="https://assets.hostinger.com/images/homepage2021/services/backups-2d6e895cf1.svg"
+                                alt="">
+                            <p>Automated backups</p>
+                        </li>
+                        <li>
+                            <img src="https://assets.hostinger.com/images/homepage2021/services/wp-installation-2161a49ee3.svg"
+                                alt="">
+                            <p>One-Click WordPress Installation</p>
+                        </li>
+                    </ul>
+                    <div class="service-container-box-vector">
+                        <img src="assets/vector/server.svg" alt="Server">
+                    </div>
+                    <ul class="service-container-box-list" id="service-container-box-list-2">
+                        <li>
+                            <img src="https://assets.hostinger.com/images/homepage2021/services/tech-support-ebf15a3d83.svg"
+                                alt="">
+                            <p>24/7/365 Tech Support</p>
+                        </li>
+                        <li>
+                            <img src="https://assets.hostinger.com/images/homepage2021/services/script-installer-6fe9e03c5c.svg"
+                                alt="">
+                            <p>Auto Script Installer</p>
+                        </li>
+                        <li>
+                            <img src="https://assets.hostinger.com/images/homepage2021/services/php-speed-boost-f7850027dc.svg"
+                                alt="">
+                            <p>PHP Speed Boost</p>
+                        </li>
+                        <li>
+                            <img src="https://assets.hostinger.com/images/homepage2021/services/uptime-guarantee-1e9eae1cb0.svg"
+                                alt="">
+                            <p>99.9% Uptime Guarantee</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="dist/js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
