Responsive domain search section added

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
             </div>
         </section>
         <!-- ----- -->
+        <!-- service section  -->
         <section class="service" id="service">
             <h1 class="title-h1" data-aos="fade-up">Our Services Include</h1>
             <div class="service-container" data-aos="fade-up">
@@ -278,6 +279,26 @@
                 </div>
             </div>
         </section>
+        <!-- ----- -->
+        <!-- domain section  -->
+        <section class="domain" id="domain">
+            <div class="domain-text">
+                <h1 class="title-h1" data-aos="fade-up">Find the perfect domain name</h1>
+                <p class="title-p" data-aos="fade-up">Enter domain name of your choice and pick any extension name on
+                    the next step (choose
+                    between .in,
+                    .com, .online, .live,
+                    .store, .info and many more)</p>
+            </div>
+            <div class="domain-container">
+                <div class="domain-container-search" data-aos="fade-up">
+                    <input type="text" class="domain-container-search-textarea"
+                        placeholder="Type in the perfect domain name">
+                    <button class="search-btn">Search</button>
+                </div>
+            </div>
+        </section>
+        <!-- ----- -->
     </main>
     <script src="dist/js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
