responsive service details section added

--- a/index.html
+++ b/index.html
@@ -299,6 +299,88 @@
             </div>
         </section>
         <!-- ----- -->
+
+        <!-- service-details section  -->
+        <section class="details" id="details">
+            <div class="details-container">
+                <div class="details-container-box details-container-box-1">
+                    <div class="details-container-box-text" data-aos="fade-up">
+                        <h3><span>EASY</span> TO USE AND SIMPLE</h3>
+                        <h1>Easy to set up</h1>
+                        <p class="title-p">Getting your website live is as simple as a click of a button. Everything you
+                            need - provided
+                            in a clear way.</p>
+                        <a href="#">Learn more</a>
+                    </div>
+                    <div class="details-container-box-video" data-aos="fade-up">
+                        <video src="https://assets.hostinger.com/videos/homepage2020/easy-to-set-up-6e4616539f.mp4"
+                            muted autoplay></video>
+                    </div>
+                </div>
+
+                <div class="details-container-box details-container-box-2">
+                    <div class="details-container-box-text" data-aos="fade-up">
+                        <h3><span>PERFORMANCE</span> AND SPEED</h3>
+                        <h1>Lightning-fast websites</h1>
+                        <p class="title-p">Website speed can slow or grow your business. Delight your visitors with a
+                            fast-loading and optimized website.</p>
+                        <a href="#">Learn more</a>
+                    </div>
+                    <div class="details-container-box-video order-2" data-aos="fade-up">
+                        <video
+                            src="https://assets.hostinger.com/videos/homepage2020/simply-fast-websites-ad53591419.mp4"
+                            muted autoplay loop></video>
+                    </div>
+                </div>
+
+
+                <div class="details-container-box details-container-box-3">
+                    <div class="details-container-box-text" data-aos="fade-up">
+                        <h3><span>GREAT</span>WORDPRESS EXPERIENCE</h3>
+                        <h1>WordPress made easy</h1>
+                        <p class="title-p">Start your website with an automatic 1-click WordPress installation. The
+                            backend is powered by LiteSpeed caching and
+                            advanced optimization to ensure your websites are fast, reliable and secure.</p>
+                        <a href="#">Learn more</a>
+                    </div>
+                    <div class="details-container-box-video" data-aos="fade-up">
+                        <video src="https://assets.hostinger.com/videos/homepage2020/wordpress-made-easy-f182af6a28.mp4"
+                            muted autoplay loop></video>
+                    </div>
+                </div>
+
+                <div class="details-container-box details-container-box-4">
+                    <div class="details-container-box-text" data-aos="fade-up">
+                        <h3><span>PROFESSIONAL</span> AND HANDS-ON</h3>
+                        <h1>24/7 Support</h1>
+                        <p class="title-p">Our team of experts will solve technical issues to get your websites up and
+                            running. Anytime.</p>
+                        <a href="#">Contact us</a>
+                    </div>
+                    <div class="details-container-box-video order-2" data-aos="fade-up">
+                        <video src="https://assets.hostinger.com/videos/homepage2020/chat-support-24-7-f281e75a32.mp4"
+                            muted autoplay></video>
+                    </div>
+                </div>
+
+                <div class="details-container-box details-container-box-5">
+                    <div class="details-container-box-text" data-aos="fade-up">
+                        <h3><span>FLEXIBLE</span> AND SCALABLE</h3>
+                        <h1>From micro to large-scale</h1>
+                        <p class="title-p">Different projects require different technologies. Pick a plan that matches
+                            your current needs, then upgrade and scale
+                            as your website grows.</p>
+                        <a href="#">See all products</a>
+                    </div>
+                    <div class="details-container-box-video" data-aos="fade-up">
+                        <video src="https://assets.hostinger.com/videos/homepage2020/easy-to-set-up-6e4616539f.mp4"
+                            muted autoplay></video>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ----- -->
+
     </main>
     <script src="dist/js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
