responsive control panel details section added

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
                 <div class="details-container-box details-container-box-3">
                     <div class="details-container-box-text" data-aos="fade-up">
-                        <h3><span>GREAT</span>WORDPRESS EXPERIENCE</h3>
+                        <h3><span>GREAT</span> WORDPRESS EXPERIENCE</h3>
                         <h1>WordPress made easy</h1>
                         <p class="title-p">Start your website with an automatic 1-click WordPress installation. The
                             backend is powered by LiteSpeed caching and
@@ -376,6 +376,49 @@
                         <video src="https://assets.hostinger.com/videos/homepage2020/easy-to-set-up-6e4616539f.mp4"
                             muted autoplay></video>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- ----- -->
+
+        <!-- control panel details section  -->
+        <section class="controlpanel" id="controlpanel">
+            <h1 class="title-h1" data-aos="fade-up">User-Friendly Control Panel</h1>
+            <div class="controlpanel-container">
+                <div class="controlpanel-container-vector" data-aos="fade-up">
+                    <img src="assets/vector/iMac.svg" alt="">
+                </div>
+                <div class="controlpanel-container-box">
+
+                    <div class="controlpanel-container-box-item controlpanel-container-box-item-1" data-aos="fade-up">
+                        <img src="https://assets.hostinger.com/images/homepage2020/control-panel-section/user-icon-923934a391.svg"
+                            alt="">
+                        <h2>Ease of Use</h2>
+                        <p class="title-p">Hostinger Panel is extremely user-friendly and can be used by those with
+                            little experience in website development.</p>
+                    </div>
+
+
+
+                    <div class="controlpanel-container-box-item controlpanel-container-box-item-2" data-aos="fade-up">
+                        <img src="https://assets.hostinger.com/images/homepage2020/control-panel-section/chart-icon-3472a5b9a8.svg"
+                            alt="">
+                        <h2>Powerful</h2>
+                        <p class="title-p">A wide variety of tools to satisfy advanced user and website developer needs.
+                        </p>
+                    </div>
+
+
+                    <div class="controlpanel-container-box-item controlpanel-container-box-item-3" data-aos="fade-up">
+                        <img src="https://assets.hostinger.com/images/homepage2020/control-panel-section/wp-icon-9be267d135.svg"
+                            alt="">
+                        <h2>WordPress Optimized</h2>
+                        <p class="title-p">Get more speed, better SEO, visitor retention and conversions with our
+                            custom-built WP optimization stack and LiteSpeed
+                            cache.</p>
+                    </div>
+
+
                 </div>
             </div>
         </section>
