offer section added

--- a/index.html
+++ b/index.html
@@ -284,17 +284,17 @@
         </section>
         <!-- ----- -->
         <!-- domain section  -->
-        <section class="domain" id="domain">
+        <section class="domain" id="domain" data-aos="fade-up">
             <div class="domain-text">
-                <h1 class="title-h1" data-aos="fade-up">Find the perfect domain name</h1>
-                <p class="title-p" data-aos="fade-up">Enter domain name of your choice and pick any extension name on
+                <h1 class="title-h1">Find the perfect domain name</h1>
+                <p class="title-p">Enter domain name of your choice and pick any extension name on
                     the next step (choose
                     between .in,
                     .com, .online, .live,
                     .store, .info and many more)</p>
             </div>
             <div class="domain-container">
-                <div class="domain-container-search" data-aos="fade-up">
+                <div class="domain-container-search">
                     <input type="text" class="domain-container-search-textarea"
                         placeholder="Type in the perfect domain name">
                     <button class="search-btn">Search</button>
@@ -450,11 +450,23 @@
                 </div>
             </div>
             <div class="arrow">
-                <div class="arrow-container">
+                <div class="arrow-container" data-aos="fade-up">
                     <span></span><span></span><span></span>
                 </div>
             </div>
 
+        </section>
+        <!-- ----- -->
+
+        <!-- offer section  -->
+
+        <section class="offer" id="offer">
+            <div class="offer-container" data-aos="fade-up">
+                <h1>30-Day Money Back Guarantee</h1>
+                <p class="title-p">We'll refund your payment if you’re not 100% satisfied with Hostinger. No hassle, no
+                    risk.</p>
+                <button class="btn btn-getstarted">Get Started</button>
+            </div>
         </section>
 
 
